general/platform-components/helm/kyverno-policies/tests/argoCD/variables.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: update
policies:
  - name: application-prevent-updates-project
    rules:
      - name: project-updates
        values:
          request.operation: UPDATE
          request.oldObject.spec.project: default
---
kind: Values
metadata:
  name: create
policies:
  - name: application-prevent-default-project
    rules:
      - name: project-updates
        values:
          request.operation: UPDATE
          request.oldObject.spec.project: default
